# discrepancy_resolver

./: Cargo.toml
data/: mine.md  target.md
src/: constants.rs  main.rs
src/config/: mod.rs
src/database/: mod.rs
src/error_handler/: mod.rs  serde_json.rs
src/runners/: rg.rs
src/utils/: files.rs  mod.rs  stdio.rs
