[package]
name = "discrepancy_resolver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
ctrlc = "3.4.1"
# getters = { git = "https://github.com/PFAhard/getters.git", branch = "master" }
getters = { path = "C:\\Users\\pasha\\code\\getters"}
home = "0.5.5"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
